# gen-ai-on-aws

./: .commits.sh  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  build_lambda_packages.sh  pyproject.toml  run_pulumi.sh
.claude/: settings.json
.claude/hooks/: block-pulumi-deployment.sh  post-edit.sh
.github/: README.md  dependabot.yml
.github/hooks/: check-secrets.sh
.github/workflows/: cd.yml  ci.yml
ai-docs/: lambda_eventsourcemapping.md  lambda_function.md  pulumi_actions.md  rds_cluster.md  sqs-queue.md  sqs_queue_policy.md
api/: .env.example  build_lambda_package.sh  pyproject.toml
api/docs/: elevenlabs-webhook.md
api/gen_ai_on_aws/: auth.py  config.py  main.py  routers.py  types.py
api/gen_ai_on_aws/endpoints/: endpoints.py  types.py
api/gen_ai_on_aws/examples/: examples.py  types.py
api/gen_ai_on_aws/models/: queue.py
api/gen_ai_on_aws/services/: queue_service.py
api/tests/: conftest.py  test_auth.py
api/tests/test_endpoints/: test_elevenlabs_webhook.py  test_endpoints.py
api/tests/test_examples/: test_endpoints.py
api/tests/test_models/: test_request.py
api/tests/test_services/: test_queue_service.py
app/: build_lambda_package.sh  pyproject.toml
app/gen_ai_on_aws/: config.py  main.py  routers.py  test_main.py  types.py
app/gen_ai_on_aws/examples/: examples.py  test_examples.py  types.py
app/gen_ai_on_aws/services/: queue_service.py
app/tests/test_examples/: test_endpoints.py
app/tests/test_services/: test_queue_service.py
docs/: monitoring.md
n8n/: README.md  pyproject.toml
n8n/n8n/: main.py
n8n/templates/: job_opportunities.json
n8n/tests/: conftest.py  test_cli.py  test_template_rendering.py  test_workflow_api.py
provisioning/: Pulumi.demo.yaml  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  github_actions.py  iam.py  layers.py  logs.py  monitoring.py  pyproject.toml
specs/: async-processing.md  ci-cd.md
worker/: build_lambda_package.sh  pyproject.toml
worker/src/worker/: config.py  main.py
worker/src/worker/models/: queue.py
worker/tests/: conftest.py  test_processor.py
worker/worker/: config.py  main.py
worker/worker/models/: queue.py
worker/worker/services/: processor.py
