[project]
name = "gen_ai_on_aws"
version = "0.1.0"
description = "Provisioning scripts for GenAI on AWS"
requires-python = "==3.13.*"
dependencies = [
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
    "pytest-cov>=4.1.0",
    "pyupgrade>=3.15.0",
]
