[project]
name = "gen_ai_on_aws"
version = "0.1.0"
description = "Provisioning scripts for GenAI on AWS"
requires-python = "==3.13.*"
dependencies = [
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.390",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.2",
]
