[project]
name = "n8n-utils"
version = "0.1.0"
description = "CLI tool to help with the management of n8n workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    # In development mode, include the FastAPI development server.
    "fastapi[standard]>=0.115",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.10.0",
]

[project.scripts]
n8n-utils = "n8n.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["n8n"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p no:warnings"

